# made

./: .pre-commit-config.yaml  Makefile  made-file.yaml  pyproject.toml
src/: command.py  controller.py  main.py  view.py
src/made/: __init__.py  command.py  controller.py  error.py  model.py  schema.py  view.py
src/made/schema/: model.py  source.py
src/schema/: model.py  source.py
